--- a/src/component/module/module.css
+++ b/src/component/module/module.css
@@ -14,6 +14,12 @@
     text-align: center;
     border-radius: 5px;
     cursor: pointer;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+.module-cell span{
+    background-color: #fff;
+    border-radius: 3px;
 }
 
 .module-cell-active {
