工具组件：间距组件完成

--- a/src/component/render/render.css
+++ b/src/component/render/render.css
@@ -1,6 +1,6 @@
 .render-phone {
     width: 100%;
-    background-image: url('../../assets/img/iphone-5-portrait.png');
+    background-image: url('http://bingde360-assets.oss-cn-beijing.aliyuncs.com/iphone-5-portrait.png');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     padding-top: 100px;
